# bgt60trxx-rs

./: Cargo.toml  README.md
config/: radar_low_framerate_single_antenna_config.json  radar_test_config.json
examples/esp32c6/: Cargo.toml
examples/esp32c6/.cargo/: config.toml
examples/esp32c6/src/: main.rs
src/: config.rs  error.rs  lib.rs  register.rs
