[package]
name = "bgt60tr13c"
description = "An async and no_std library for the 60GHz FMCW radar BGT60TR13C from Infineon"
version = "0.1.0"
authors = ["Leon Mueller"]
edition = "2024"
repository = "https://github.com/thedevleon/bgt60tr13c-rs"
license = "MIT"
keywords = ["bgt60tr13c", "radar", "60ghz", "fmcw", "infineon"]
categories = ["embedded", "no-std", "hardware-support", "asynchronous", "sensors"]

[dependencies]
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
bitfield-struct = "0.10.1"
