[package]
name = "bgt60trxx"
description = "An async and no_std library for the XENSIV™ BGT60TRxx 60 GHz FMCW radar sensors from Infineon"
version = "0.1.0"
authors = ["Leon Mueller"]
edition = "2024"
repository = "https://github.com/thedevleon/bgt60trxx-rs"
license = "MIT"
keywords = ["bgt60tr13c", "bgt60utr11aip", "bgt60trxx", "bgt60tr", "radar", "60ghz", "fmcw", "infineon", "xensiv"]
categories = ["embedded", "no-std", "hardware-support", "asynchronous", "sensors"]

[dependencies]
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
bitfield-struct = "0.10.1"
