[package]
name = "bgt60trxx"
description = "An async and no_std library for the XENSIV™ BGT60TRxx 60 GHz FMCW radar sensors from Infineon"
authors = ["Leon Mueller"]
version = "0.1.0"
edition = "2024"

license = "MIT"

documentation = "https://docs.rs/bgt60trxx"
repository = "https://github.com/thedevleon/bgt60trxx-rs"
readme = "README.md"

keywords = ["bgt60tr13c", "bgt60utr11aip", "radar", "60ghz", "fmcw"]
categories = ["embedded", "no-std", "hardware-support", "asynchronous"]

exclude = [
    "datasheet/*",
]

[features]
debug = ["dep:log"]

[dependencies]
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
bitfield-struct = "0.10.1"
log = { version = "0.4", optional = true }

