[package]
edition = "2021"
name = "esp32c6"
version = "0.1.0"

[[bin]]
name = "esp32c6"
path = "./src/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
bgt60trxx = { path = "../../" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
